--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "http-assert": "^1.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10"
   }
